web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/21/output.txt
[SyntaxError]: `...` must be followed by an assignable reference in assignment contexts (1,6)
1|({...x = 1} = {})
 |    ^
